2016-06-18  Markus Gans  <guru.mail@muenster.de>
	* Improved status bar text updating at window change

2016-06-16  Markus Gans  <guru.mail@muenster.de>
	* Bug fix in FTerm updateVTerm() for updates from vdesktop
	* Bug fix in FDialog onWindowActive() for combined setFocus() 
	  and activateWindow()

2016-06-13  Markus Gans  <guru.mail@muenster.de>
	* Improved title bar menu integration

2016-06-12  Markus Gans  <guru.mail@muenster.de>
	* Add a title bar menu to close dialogs

2016-05-24  Markus Gans  <guru.mail@muenster.de>
	* Use nl_langinfo to determine the numeric thousands separator 
	  for Fstring::setFormatedNumber as default parameter

2016-05-22  Markus Gans  <guru.mail@muenster.de>
	* Fix for menus in modal dialogs

2016-05-16  Markus Gans  <guru.mail@muenster.de>
	* Improve adjustSize()
	* Implement adjustSizeGlobal() for all widgets
	* Don't focus menus with focusFirstChild() and focusLastChild()
	* Remove duplicate code

2016-05-01  Markus Gans  <guru.mail@muenster.de>
	* Better terminal identification

2016-04-30  Markus Gans  <guru.mail@muenster.de>
	* Improve 256 color terminal detection

2016-04-19  Markus Gans  <guru.mail@muenster.de>
	* Fix the missing typecast for SpecialCharacter in "ui.cpp"

2016-02-04  Markus Gans  <guru.mail@muenster.de>
	* KDE Konsole detection improved
	* OSC sequence support for GNU Screen and tmux

2016-01-31  Markus Gans  <guru.mail@muenster.de>
	* Better escape sequences readability through 
	  symbolic names like ESC, CSI or OSC

2016-01-24  Markus Gans  <guru.mail@muenster.de>
	* Moving widget flags into the class fc

2016-01-17  Markus Gans  <guru.mail@muenster.de>
	* Moving events into the class fc
	* Avoid height and width underflow in adjustSize()
	* Fix default color handling on Cygwin and Linux terminals

2016-01-10  Markus Gans  <guru.mail@muenster.de>
	* Better default color handling in FOptiAttr

2016-01-07  Markus Gans  <guru.mail@muenster.de>